# chatgpt_rs

./: Cargo.toml  README.md
src/: chatgpt.rs  client.rs  converse.rs  err.rs  prelude.rs  types.rs
