[package]
name = "chatgpt_using_official_api"
version = "0.6.0"
edition = "2021"
description = "ChatGPT API Wrapper"
authors = ["Vincent <vincent.combey@gmail.com>"]
license = "MIT"
repository = "https://github.com/vcombey/chatgpt_rs"
keywords = ["ChatGPT", "OpenAI"]
categories = ["api-bindings"]

[lib]
name = "chatgpt"
path = "./src/chatgpt.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "stream"] }
tokio = { version = "1.19.2", features = ["macros"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
thiserror = "1.0.31"
futures-util = "^0.3.21"
bytes = "^1.1.0"
eventsource-stream = "0.2.3"
json_value_merge = "1.1.2"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
